--- a/openff_sphinx_theme/openff_sphinx_theme/sass/sphinx-content.sass
+++ b/openff_sphinx_theme/openff_sphinx_theme/sass/sphinx-content.sass
@@ -1,8 +1,23 @@
 // Style rules for Sphinx-rendered content
 
 .headerlink
-    padding-left: 1em
-    font-size: 0.8em
+    margin-left: 1em
+
+    display: inline-block
+    transform: translateY(.25rem)
+    transition: transform .25s .25s,color .25s,opacity .125s .25s
+    opacity: 0
+
+h1, h2, h3, h4, h5, h6
+    &:hover, &:target
+        .headerlink
+            -webkit-transform: translate(0)
+            transform: translate(0)
+            opacity: 1
+    .headerlink:focus
+        -webkit-transform: translate(0)
+        transform: translate(0)
+        opacity: 1
 
 dl
     &.module,
@@ -83,7 +98,7 @@ dl
         .viewcode-link
             color: #27AE60
         .headerlink
-            color: #e83e8c !important
+            color: #e83e8c
             transform: none
             opacity: 1
 
@@ -138,9 +153,6 @@ span:empty
     &:first-child + h1
         margin-top: 0px
 
-p, dl, ol, ul, blockquote, pre, table
-    margin-bottom: 1em
-
 .highlight
     background-color: unset
 
@@ -189,6 +201,7 @@ p, dl, ol, ul, blockquote, pre, table
     @extend .message
 
     .admonition-title
+        margin-bottom: 0
         @extend .message-header
         ~ *
             @extend .message-body
@@ -236,3 +249,43 @@ p, dl, ol, ul, blockquote, pre, table
 .align-left
     display: block
     margin-right: auto
+
+@if $use-material-headings
+    h1
+        margin: 0 0 2rem
+        color: rgba(0,0,0,.54)
+        font-size: 1.5625rem
+        line-height: 1.3
+
+    h1,h2
+        font-weight: 300
+        letter-spacing: -.01em
+
+    h2
+        margin: 2rem 0 .8rem
+        font-size: 1.25rem
+        line-height: 1.4
+        + h3
+            margin-top: .8rem
+
+    h3
+        margin: 1.6rem 0 .8rem
+        font-size: 1rem
+        font-weight: 500
+        letter-spacing: -.01em
+        line-height: 1.5
+
+    h4
+        font-size: .8rem
+
+    h4,h5,h6
+        margin: .8rem 0
+        font-weight: 700
+        letter-spacing: -.01em
+
+    h5,h6
+        color: rgba(0,0,0,.54)
+        font-size: .64rem
+
+    h5
+        text-transform: uppercase
