Many small improvements

--- a/openff_sphinx_theme/openff_sphinx_theme/sass/admonitions.sass
+++ b/openff_sphinx_theme/openff_sphinx_theme/sass/admonitions.sass
@@ -160,6 +160,8 @@
 
       &.note, &.admonition-note
           @include material_admonitions($grey, "Font Awesome 5 Free", "\f303")
+      &.seealso, &.admonition-seealso
+          @include material_admonitions($grey, "Font Awesome 5 Free", "\f06e")
       &.admonition-abstract, &.admonition-summary, &.admonition-tldr
           @include material_admonitions($cyan, "Font Awesome 5 Free", "\f543")
       &.admonition-info
