--- a/openff_sphinx_theme/openff_sphinx_theme/sass/api_docs.sass
+++ b/openff_sphinx_theme/openff_sphinx_theme/sass/api_docs.sass
@@ -43,6 +43,7 @@ dl
             // add a bit more breathing room
             > dt
                 padding: 0.5rem
+                font-weight: 300
             > dd
                 padding-left: 1rem
                 > dl > dd
