Clean up in preparation for actual use

--- a/openff_sphinx_theme/openff_sphinx_theme/sass/sphinx-content.sass
+++ b/openff_sphinx_theme/openff_sphinx_theme/sass/sphinx-content.sass
@@ -41,7 +41,7 @@ span:empty
 .highlight
     background-color: unset
 
-.highlight-default
+.notranslate
     overflow-x: auto
     table.highlighttable
         td.linenos
