Small margin tweaK

--- a/openff_sphinx_theme/openff_sphinx_theme/sass/sphinx-content.sass
+++ b/openff_sphinx_theme/openff_sphinx_theme/sass/sphinx-content.sass
@@ -68,8 +68,13 @@ span:empty
     margin-right: auto
 
 @if $use-material-headings
+    *:target
+        >
+            h1,h2,h3,h4,h5,h6
+                margin-top: 0
+
     h1
-        margin: 0 0 2em
+        margin: 0 0 2rem
         color: rgba(0,0,0,.54)
         font-size: 1.9625em
         line-height: 1.3
@@ -79,14 +84,14 @@ span:empty
         letter-spacing: -.01em
 
     h2
-        margin: 2em 0 .8em
+        margin: 2rem 0 .8rem
         font-size: 1.65em
         line-height: 1.4
         + h3
-            margin-top: .8em
+            margin-top: .8rem
 
     h3
-        margin: 1.6em 0 .8em
+        margin: 1.6rem 0 .8rem
         font-size: 1.4em
         font-weight: 500
         letter-spacing: -.01em
@@ -96,7 +101,7 @@ span:empty
         font-size: 1.2em
 
     h4,h5,h6
-        margin: .8em 0
+        margin: .8rem 0
         font-weight: 700
         letter-spacing: -.01em
 
