--- a/openff_sphinx_theme/openff_sphinx_theme/sass/site.sass
+++ b/openff_sphinx_theme/openff_sphinx_theme/sass/site.sass
@@ -236,6 +236,9 @@ header
         align-items: center
         display: inline-flex
 
+    .navbar.is-primary .navbar-brand > a.navbar-item:hover
+        background-color: bulmaDarken($primary, 5%)
+
     .nav-tabs
         a
             color: white
