--- a/openff_sphinx_theme/openff_sphinx_theme/sass/admonitions.sass
+++ b/openff_sphinx_theme/openff_sphinx_theme/sass/admonitions.sass
@@ -125,7 +125,7 @@
       page-break-inside: avoid
       border-left: 0.25rem solid $accent
       border-radius: 0.125rem
-      box-shadow: 0 0.25rem 0.625rem hsla(0, 0%, 0%, 0.05), 0 0.5px 1px hsla(0, 0%, 0%, 0.05)
+      @include z-depth(2);
 
       // [print]: Omit shadow as it may lead to rendering errors
       @media print
